# parallax-5

./: .gitignore  CANONICAL_FACTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-CC0  LICENSE-PAPER  Makefile  README.md  RUN_VERIFICATION.sh  SECURITY.md  artifact_map.json  pyproject.toml
.github/workflows/: ci.yml
case_studies/ai_agent_gate/: README.md  demo.py
case_studies/ai_agent_treasury/: README.md  scenario.py
case_studies/bridge_attestation/: README.md
case_studies/cross_vm/: README.md
case_studies/llm_red_team/: live_demo.html  run_red_team.py  transcript_replay.json
case_studies/vault_4626/: README.md
demos/agent_gate/: REPORT.md  parallax.yaml  simulate.py
demos/bridge/: REPORT.md  exploit.py  parallax.yaml
demos/vault/: REPORT.md  exploit.py  parallax.yaml
docs/: AI_SAFETY_INTERPRETATION.md  ARTIFACT_MAP.md  CATALOG_METHODOLOGY.md  CERTIFICATE_SCHEMA.md  CHARTER.md  COMPLIANCE_MAPPING.md  CROPS_VECTOR.md  DEPLOY.md  EVMYUL_COMPOSITION.md  FORK_PROTOCOL.md  FOR_INTEGRATORS.md  IP_PROVENANCE.md  MAPPING_PROTOCOL.md  OPEN_PROBLEMS.md  REGISTRY.md  RELATED_WORK.md  REPRODUCIBILITY_LOG.txt  THEOREM_INDEX.md  TOOL_COMPARISON.md  TOOL_MAPPING.md  WALKAWAY_THEOREM.md
docs/mappings/: aquaursa-v1.md
examples/: certificate_uniswap_v3_core.json
lean/: lakefile.toml
lean/Parallax5/: Compositional.lean  Registry.lean  Walkaway.lean
mappings/: README.md  aquaursa-v1.json
notebooks/: EVMYulLean_Integration_Verification.ipynb
paper/: CLASSIFICATION_CODEBOOK.md  EVM_INTEGRATION.md  EXECUTIVE_SUMMARY.md  FALSIFICATION_CHALLENGE.md  GOVERNANCE.md  INTER_RATER_PROTOCOL.md  MARKET_THESIS.md  PARALLAX-5-Standard.md  PRACTITIONER_GUIDE.md  PRODUCT_TIERS.md  ROADMAP_30_DAYS.md  STANDARDS_COMPARISON.md  VISION.md  parallax-5.tex
registry/: deployments.json  foundry.toml
schemas/: certificate_v1.json  mapping_protocol_v1.json  tool_mapping_v1.json
scripts/: self_security_audit.py  verify_evm_integration.sh
tests/: test_crops.py  test_mapping_registry.py
(+83 files in other folders)
